--- a/frontend/src/app/pages/product-list/product.list.component.html
+++ b/frontend/src/app/pages/product-list/product.list.component.html
@@ -1,5 +1,5 @@
 <h1 align="center" class="display-4 ">Products</h1>
-<a *ngIf="currentUser?.role == Role.Customer" style="color: inherit"
+<a  style="color: inherit"
    routerLink="/seller/product/new" class="float-right mb-3"><i class="fas fa-plus fa-2x">Add</i>
 </a>
 <table id="table" class="table table-striped text-center" style="width:100%;">
